Fixing sound file paths

--- a/index.html
+++ b/index.html
@@ -9202,11 +9202,11 @@ var _alexspurling$simonsays$Sound$playNote = F2(
 		return {ctor: '_Tuple0'};
 	});
 var _alexspurling$simonsays$Sound$initialSound = function () {
-	var nope = _alexspurling$simonsays$Sound$getMediaElement('/assets/nope.wav');
-	var g4 = _alexspurling$simonsays$Sound$getMediaElement('/assets/g4.wav');
-	var e4 = _alexspurling$simonsays$Sound$getMediaElement('/assets/e4.wav');
-	var c4 = _alexspurling$simonsays$Sound$getMediaElement('/assets/c4.wav');
-	var g3 = _alexspurling$simonsays$Sound$getMediaElement('/assets/g3.wav');
+	var nope = _alexspurling$simonsays$Sound$getMediaElement('assets/nope.wav');
+	var g4 = _alexspurling$simonsays$Sound$getMediaElement('assets/g4.wav');
+	var e4 = _alexspurling$simonsays$Sound$getMediaElement('assets/e4.wav');
+	var c4 = _alexspurling$simonsays$Sound$getMediaElement('assets/c4.wav');
+	var g3 = _alexspurling$simonsays$Sound$getMediaElement('assets/g3.wav');
 	return {g3: g3, c4: c4, e4: e4, g4: g4, nope: nope};
 }();
 var _alexspurling$simonsays$Sound$Sound = F5(
