--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     </head>
 
     <body>
-        <script type='text/javascript' src='elm.js'></script>
-        <script type='text/javascript' src='webaudio.js'></script>
+        <script type='text/javascript' src='js/simonsays.min.js'></script>
     </body>
 </html>
